[tool.poetry]
name = "mistql"
version = "0.4.12"
description = "Python implementation of MistQL query language"
authors = ["Evin Sellin <evinism@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
lark = "^1.0.0"
typeguard = ">=2.13.3,<5.0.0"
json-lines = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
black = "^23.3.0"
toml = "^0.10.2"
mypy = "^1.4.1"
flake8 = "^6.0.0"

[[tool.mypy.overrides]]
module = "json_lines"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/evinism/mistql/issues"

[tool.poetry.scripts]
mqpy = "mistql.cli:main"
