[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mistql"
version = "0.4.12"
description = "Python implementation of MistQL query language"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "lark>=1.0.0",
    "typeguard>=2.13.3,<5.0.0",
    "json-lines>=0.5.0",
]
# authors = ["Evin Sellin <evinism@gmail.com>"]
# issues = "https://github.com/evinism/mistql/issues"

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "ruff==0.11.12",
    "toml==0.10.2",
    "mypy==1.4.1",
]

[[tool.mypy.overrides]]
module = "json_lines"
ignore_missing_imports = true
