[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mistql"]

[project]
name = "mistql"
version = "0.4.12"
description = "Python implementation of MistQL query language"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "lark>=1.0.0,<2.0.0",
    "typeguard>=2.13.3,<5.0.0",
    "json-lines>=0.5.0,<1.0.0",
]
authors = [{ name = "Evin Sellin", email = "evinism@gmail.com" }]
urls = { Repository = "https://github.com/evinism/mistql", Issues = "https://github.com/evinism/mistql/issues" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4,<8.0.0",
    "ruff>=0.11.12,<0.12.0",
    "toml>=0.10.2,<1.0.0",
    "mypy>=1.4.1,<2.0.0",
    "snakeviz>=2.2.0,<3.0.0",
]

[[tool.mypy.overrides]]
module = "json_lines"
ignore_missing_imports = true
