[package]
name = "mistql"
version = "0.4.12"
edition = "2021"
description = "A miniature query language for performing computations on JSON-like structures"
license = "MIT"
repository = "https://github.com/evinism/mistql"
keywords = ["query", "json", "data", "language"]
categories = ["data-structures", "parsing"]

[lib]
name = "mistql"
path = "src/lib.rs"

[[bin]]
name = "mq"
path = "src/bin/mq.rs"

[dependencies]
# Core JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parsing - using nom for parser combinators (replaces Lark)
nom = "7.0"

# Regular expressions (for regex type and string operations)
regex = "1.0"

# CLI interface (replaces Python's argparse)
clap = { version = "4.0", features = ["derive", "color", "suggestions"] }

# Logging (for debug logging function)
log = "0.4"
env_logger = "0.10"

# JSONL support (replaces Python's json-lines)
jsonl = "0.1"

# Date/time handling (for DateTime -> ISO string conversion)
chrono = { version = "0.4", features = ["serde"] }

# Mathematical operations and statistics
num-traits = "0.2"
statistical = "0.1"

# String manipulation utilities
unicode-segmentation = "1.0"

[dev-dependencies]
# Testing framework (replaces Python's pytest)
rstest = "0.19"

# Property-based testing (for comprehensive test coverage)
proptest = "1.0"

# Benchmarking (for performance comparison with JS/Python)
criterion = { version = "0.5", features = ["html_reports"] }

# Additional testing utilities
tempfile = "3.0"
