[package]
name = "mistql"
version = "0.4.12"
edition = "2021"
description = "A miniature query language for performing computations on JSON-like structures"
license = "MIT"
repository = "https://github.com/evinism/mistql"
keywords = ["query", "json", "data", "language"]
categories = ["data-structures", "parsing"]

[lib]
name = "mistql"
path = "src/lib.rs"

[[bin]]
name = "mq"
path = "src/bin/mq.rs"

[dependencies]
# Core JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

# Parsing - using nom for parser combinators (replaces Lark)
nom = "7.0"

# Regular expressions (for regex type and string operations)
regex = "1.0"

# CLI interface (replaces Python's argparse)
clap = { version = "4.0", features = ["derive", "color", "suggestions"] }

# TODO: Are we using any of the below?
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging (for debug logging function)
log = "0.4"
env_logger = "0.10"

# JSONL support (replaces Python's json-lines)
jsonl = "0.1"

# Date/time handling (for DateTime -> ISO string conversion)
chrono = { version = "0.4", features = ["serde"] }

# Mathematical operations and statistics
num-traits = "0.2"
statistical = "0.1"
unicode-segmentation = "1.0"

[dev-dependencies]
rstest = "0.19"

# TODO: Are we using any of the below?
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
